--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     margin: 0;
 }
 header{
+    width: 100%;
+    position: sticky;
+    top: 0;
     display: flex;
     background-color: rgb(70, 70, 244);
     justify-content: space-between;
@@ -66,6 +69,43 @@ section div .button-2{
 #Product h3{
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 100px;
     letter-spacing: 5px;
     font: bolder;
+}
+.container{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+.container img{
+    width: 50px;
+    padding: 10px;
+    background-color: rgb(96, 96, 242);
+}
+.container h2{
+    margin-top: 35px;
+    margin-left: -290px;
+}
+.container p{
+    margin-left: 30px;
+}
+.container .container-1{
+    display: flex;
+    background-color: rgb(242, 238, 238);
+    height: 250px;
+    margin-left: 60px;
+    margin-top: 30px;
+    width: 50%;
+}
+.container .container-2{
+    display: flex;
+    background-color: rgb(242, 238, 238);
+    margin-right: 60px;
+    margin-top: 30px;
+    width: 50%;
+}
+.container .container-2 h2{
+    position: relative;
+    margin-left: -378px;
 }
